-------------
 7.x-2.x-dev
-------------
- #1249694 patch by mrfelton: Improve usability of element ID system. Added a method of
  selecting form elements from within the Rules interface.
- #1428020 by jordojuice: Remove the "Create a new form element" action.
- #1209058 by jordojuice: New action to set any element attribute. This action replaced
  most of the previous actions which were categorized by type. It also makes the module
  significantly more flexible in the actions it can take on form elements.