@@ -1,3 +1,81 @@
-div.rules_forms_element_id {
-  font-size: 80%;
+/**
+ * @file
+ * Styles for Rules forms support module.
+ */
+
+span.rules-forms-info-image {
+	display: inline-block;
+  background: transparent url(info_bubble.png) no-repeat 0px 30%;
+	background-size: 14px 14px;
+  padding: 0;
+	margin: 0 4px;
+	width: 14px;
+	height: 14px;
+}
+
+a.rules-forms-info-link:hover + div.rules-forms-element-info  {
+  display: block;
+}
+
+a.rules-forms-info-link:focus + div.rules-forms-element-info {
+  display: block;
+}
+
+div.rules-forms-element-info {
+  display: none;
+  position: absolute;
+  z-index: 50;
+  padding: 6px;
+  background: white;
+  border: 1px solid #BEBFB9;
+  font-size: .9em;
+  font-weight: normal;
+  -moz-box-shadow: 2px 2px 4px #666;
+  -webkit-box-shadow: 2px 2px 4px #666;
+  box-shadow: 2px 2px 4px #666;
+  -moz-border-radius: 5px; /* FF1+ */
+  -webkit-border-radius: 5px; /* Saf3-4 */
+  border-radius: 5px; /* Opera 10.5, IE9, Saf5, Chrome */
+	margin-top: -4px;
+}
+
+div.rules-forms-element-info:hover {
+  display: block;
+}
+
+div.rules-forms-element-info span.rules-forms-element-label {
+  font-weight: bold;
+}
+
+div.rules-forms-element-info table {
+  border: none;
+  margin-top: 6px;
+}
+
+div.rules-forms-element-info table tr {
+  border: none;
+}
+
+div.rules-forms-element-info table tr td {
+  padding: 0 6px;
+}
+
+div.rules-forms-element-info table tr td:last-child {
+  border: none;
+}
+
+td.rules-forms-element-type {
+  text-align: right;
+  font-weight: bold;
+  vertical-align: top;
+  padding-top: 4px;
+}
+
+div.rules-forms-element-info ul {
+  list-style-type: circle;
+  margin: 0 0 0 8px;
+}
+
+span.rules-forms-info-help {
+  font-size: .8em;
 }
