@@ -11,8 +11,11 @@ define('RULES_FORMS_ADMIN_PATH', 'admin/config/workflow/rules/forms');
  * Implements hook_help().
  */
 function rules_forms_help($path, $arg) {
-  if ($path === RULES_FORMS_ADMIN_PATH) {
-    return '<p>' . t('Settings and overview of form events.') . '</p>';
+	switch ($path) {
+    case 'admin/help#rules_forms':
+      return '<p>' . t('Rules forms provides Rules events, conditions, and actions for any form build via the Drupal form API. To activate events for a form you must first visit <a href="!admin">Rules forms settings</a> and enable activation messages.', array('!admin' => url(RULES_FORMS_ADMIN_PATH))) . '</p>';
+    case RULES_FORMS_ADMIN_PATH:
+      return '<p>' . t('Settings and overview of form events and active elements.') . '</p>';
   }
 }
 
@@ -153,16 +156,23 @@ function rules_forms_invoke_event($event_type, &$form, &$form_state, $form_id = 
 function rules_forms_after_build($form, &$form_state) {
   $form_events = variable_get('rules_forms_event_info', array());
   $form_id = isset($form['#id']) ? str_replace('-', '_', $form['#id']) : NULL;
+
   // Set elements for form events if necessary.
-  if ((isset($form_events[$form_id]['reset']) && $form_events[$form_id]['reset'] && $reset = TRUE)
+  if ((isset($form_events[$form_id]['reset']) && $form_events[$form_id]['reset'])
       || (!isset($form_events[$form_id]['elements']) || empty($form_events[$form_id]['elements']))) {
-    if (!empty($reset)) {
+    if ($form_events[$form_id]['reset']) {
       $form_events[$form_id]['elements'] = array();
       $form_events[$form_id]['reset'] = FALSE;
     }
     rules_forms_build_elements($form, $form_events[$form_id]['elements']);
     variable_set('rules_forms_event_info', $form_events);
     rules_clear_cache();
+  }
+
+  // Add element information for reference by users.
+  if (!empty($_SESSION['rules_forms_element_info'])) {
+    rules_forms_add_popups($form, $form_events[$form_id]['elements']);
+    drupal_add_css(drupal_get_path('module', 'rules_forms') . '/rules_forms.css');
   }
   return $form;
 }
@@ -182,13 +192,91 @@ function rules_forms_after_build($form, &$form_state) {
 function rules_forms_build_elements($form, &$elements, $parent = '') {
   foreach (element_children($form) as $key) {
     if (isset($form[$key]['#type']) && isset($form[$key]['#title']) && $form[$key]['#type'] !== 'hidden' && $form[$key]['#type'] !== 'token') {
-      $elements[$parent . $key] = array(
+      $elements[$form[$key]['#type'] .':'. $parent . $key] = array(
         'type' => $form[$key]['#type'],
         'label' => $form[$key]['#title'],
       );
     }
     // Recursive call on children.
     rules_forms_build_elements($form[$key], $elements, $parent . $key . ':');
+  }
+}
+
+/**
+ * Create element information popups for each element of a form.
+ * This functions is only called if the current session has the setting enabled.
+ *
+ * @param $form
+ *   The form currently being viewed.
+ * @param $elements
+ *   An array of element info for the form being viewed.
+ */
+function rules_forms_add_popups(&$form, $elements) {
+  $help = t('Note: The circle symbol indicates an array (multiple value) property.');
+  foreach ($elements as $element_id => $info) {
+    $element = &_rules_forms_get_element($form, $element_id);
+    // For fieldsets we have to use the suffix instead of the title.
+    $attribute = isset($element['#type']) && $element['#type'] == 'fieldset' ? '#suffix' : '#title';
+
+    // Add the info popup image.
+    if (isset($element['#title'])) {
+      $element[$attribute] = $element['#title'] . '<a href="#" class="rules-forms-info-link"><span class="rules-forms-info-image"></span></a>';
+    }
+    else {
+      $element[$attribute] = ucfirst(str_replace('_', ' ', $element['#type'])) . '<a href="#" class="rules-forms-info-link"><span class="rules-forms-info-image"></span></a>';
+    }
+
+    $element[$attribute] .= '<div class="rules-forms-element-info">' .
+                           '<span class="rules-forms-element-label"><h3>' . $info['label'] . '</h3></span>' .
+                           '<table width="100%" border="0" cellpadding="2">';
+
+    // Each value calls the display function which will recursively print attribute information.
+    foreach ($element as $key => $value) {
+      if ($key !== $attribute && element_property($key)) {
+        $element[$attribute] .= '<tr><td class="rules-forms-element-type">' . ucfirst(str_replace(array('#', '_'), array('', ' '), $key)) . ':</td><td class="rules-forms-element-value">';
+        _rules_forms_display_info($element[$attribute], $value);
+        $element[$attribute] .= '</td></tr>';
+      }
+    }
+    $element[$attribute] .= '</table><span class="rules-forms-info-help">' . $help . '</span></div>';
+  }
+}
+
+/**
+ * Prints element array information either directly or in unordered lists.
+ * Array values are processed recursively until 3 arrays have been reached.
+ *
+ * @param $element
+ *   The form element's property that will hold the text. This argument is
+ *   passed by reference and is manipulated directly.
+ * @param $data
+ *   The data to be converted into readable formatted text.
+ * @param $level
+ *   The current level of arrays in processing. Defaults to 1.
+ * @param $key
+ *   The key of the current array value. This is used in recursive calls
+ *   to demonstrate the structure of an array to the user.
+ */
+function _rules_forms_display_info(&$element, $data, $level = 1, $delta = NULL) {
+  if (is_array($data) && $level != 3) {
+    $element .= $delta;
+    $element .= '<ul>';
+    // Recursive calls on array values up until the third array.
+    foreach ($data as $key => $value) {
+      $element .= '<li>';
+      _rules_forms_display_info($element, $value, $level + 1, $key);
+      $element .= '</li>';
+    }
+    $element .= '</ul>';
+  }
+  // For arrays that are more than three deep we just indicate its value.
+  elseif (is_array($data)) {
+    $element .= '(multiple values)';
+  }
+  else {
+    $value = !empty($delta) ? $delta . ': ' : '';
+    $value .= $data == '' ? '(empty)' : $data;
+    $element .= $value;
   }
 }
 
